SEO optimization for  nomad-cans-10l.html

--- a/store/products/nomad-cans-10l.html
+++ b/store/products/nomad-cans-10l.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nomad Can 10L - Savanna Circuit Store</title>
+        <!-- SEO Meta Tags -->
+    <title>Nomad Cans 10L - Portable Solar Milk Chiller | Savanna Circuit Store</title>
+    <meta name="description" content="Buy Nomad Cans 10L, a durable and portable milk chiller designed for small-scale farmers. Keep milk fresh during transport with high-efficiency thermal retention.">
+    <meta name="keywords" content="Nomad Cans 10L, portable milk chiller, dairy transport, milk can, solar cooling,Milk transport cooling container, insulated milk can, mobile cold chain container,Savanna Circuit, Kenya dairy equipment">
+    <link rel="canonical" href="https://sav-circuit.com/store-app/products-detailed/nomad-cans-10l.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Nomad Cans 10L - Portable Milk Chiller">
+    <meta property="og:description" content="Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.">
+    <meta property="og:image" content="../../assets/images/nomad 10.png">
+    <meta property="og:url" content="../../store/products/nomad-cans-10l.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Nomad Cans 10L",
+      "image": [
+        "../../assets/images/nomad 10.png"
+       ],
+      "description": "Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "NOMAD-10L",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/nomad-cans-10l.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
