SEO optimization for  nomad-cans-25l.html

--- a/store/products/nomad-cans-25l.html
+++ b/store/products/nomad-cans-25l.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nomad Cans 25L - Savanna Circuit Store</title>
+    <!-- SEO Meta Tags -->
+    <title>Nomad Cans 25L - Mid-Capacity Milk Chiller | Savanna Circuit Store</title>
+    <meta name="description" content="Shop the Nomad Cans 25L, the perfect mid-capacity milk chiller for cooperatives and medium-scale farms. Ensures milk quality during transport.">
+    <meta name="keywords" content="Nomad Cans 25L, milk chiller, dairy transport, Milk transport cooling container, insulated milk can, mobile cold chain container, cooperative equipment, solar cooling, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/nomad-cans-25l.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Nomad Cans 25L - Mid-Capacity Milk Chiller">
+    <meta property="og:description" content="The perfect balance between capacity and portability for medium-scale cold chain farm operations and cooperatives.">
+    <meta property="og:image" content="../../assets/images/Nomad 25.png">
+    <meta property="og:url" content="../../store/products/nomad-cans-25l.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Nomad Cans 25L",
+      "image": [
+        "../../assets/images/Nomad 25.png"
+       ],
+      "description": "The Nomad Cans 25L provides mid-range capacity for farm cooperatives and larger dairy operations. Its enhanced thermal insulation maintains milk quality during medium-distance transport.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "NOMAD-25L",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/nomad-cans-25l.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
