SEO Optimization for nomad-cans-50l.html

--- a/store/products/nomad-cans-50l.html
+++ b/store/products/nomad-cans-50l.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nomad Cans 50L - Savanna Circuit Store</title>
+        <!-- SEO Meta Tags -->
+    <title>Nomad Cans 50L - High-Capacity Milk Chiller | Savanna Circuit Store</title>
+    <meta name="description" content="Shop the Nomad Cans 50L, a high-capacity, heavy-duty milk chiller for large cooperatives and commercial dairy transport. Ensures quality over long distances.">
+    <meta name="keywords" content="Nomad Cans 50L, bulk milk transport, commercial milk chiller, dairy logistics, solar cooling,Milk transport cooling container, insulated milk can, mobile cold chain container, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/nomad-cans-50l.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Nomad Cans 50L - High-Capacity Milk Chiller">
+    <meta property="og:description" content="High-capacity portable container for bulk operations. Industrial-grade construction for durability and long-distance transport.">
+    <meta property="og:image" content="../../assets/images/nomad-cans.webp">
+    <meta property="og:url" content="../../store/products/nomad-cans-50l.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Nomad Cans 50L",
+      "image": [
+        "../../assets/images/nomad-cans.webp"
+       ],
+      "description": "The Nomad Cans 50L is engineered for large cooperatives and commercial dairy operations. Its premium thermal insulation and high capacity make it ideal for long-distance milk transport.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "NOMAD-50L",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/nomad-cans-50l.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
