--- a/store/index.html
+++ b/store/index.html
@@ -74,7 +74,7 @@
                 <div class="products-grid">
                     <!-- Product: Nomad Cans 10L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/nomad 10.png" alt="Nomad Cans 10L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/nomad-10.webp" alt="Nomad Cans 10L">
                         <h4>Nomad Cans - 10L</h4>
                         <p class="product-spec">Portable Milk  container</p>
                         <p class="product-description">Durable insulated milk transportation container for cooling on the go operations. Lightweight and efficient for small-scale farmers.</p>
@@ -87,7 +87,7 @@
 
                     <!-- Product: Nomad Cans 25L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/Nomad%2025.png" alt="Nomad Cans 25L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/Nomad-25.webp" alt="Nomad Cans 25L">
                         <h4>Nomad Cans - 25L</h4>
                         <p class="product-spec">Mid-capacity mobile cold chain container</p>
                         <p class="product-description">Perfect balance between capacity and portability for medium-scale cooling on the go farm operations.</p>
@@ -100,7 +100,7 @@
 
                     <!-- Product: Nomad Cans 50L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/NOMAD CANS.png" alt="Nomad Cans 50L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/nomad-50l.webp" alt="Nomad Cans 50L">
                         <h4>Nomad Cans - 50L</h4>
                         <p class="product-spec">Heavy-duty mobile cold chaincontainer</p>
                         <p class="product-description">High-capacity portable milk cooling container for bulk operations. Industrial-grade construction for durability.</p>
@@ -113,7 +113,7 @@
 
                     <!-- Product: IWD Ice Water Dispenser -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/IWD.png" alt="IWD Ice Water Dispenser">
+                        <img class="product-image" loading="lazy" src="../../assets/images/iwd.webp" alt="IWD Ice Water Dispenser">
                         <h4>IWD Ice Water Dispenser</h4>
                         <p class="product-spec">Solar-powered ice water</p>
                         <p class="product-description">Solar-powered ice water for farms and communities. Improves cooling on the go, facilitating produce preservation and ensured low food spoilage .</p>
@@ -126,7 +126,7 @@
 
                     <!-- Product: Eco-Sav Thermal Bags -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/Eco-Sav bag(1).png" alt="Eco-Sav Thermal Bags">
+                        <img class="product-image" loading="lazy" src="../../assets/images/Eco-Sav-bag-1.webp" alt="Eco-Sav Thermal Bags">
                         <h4>Eco-Sav Thermal Bags</h4>
                         <p class="product-spec">Insulated Fish and produce transport bags</p>
                         <p class="product-description">Durable thermal bags for temperature-sensitive produce transport. Reusable and environmentally friendly.</p>
@@ -140,7 +140,7 @@
 
                             <!-- Product: MaziwaPlus Dairy Management System -->
                 <div class="product-card" data-category="SOLAR_THRIVE">
-                        <img class="product-image" loading="lazy" src="../../assets/images/M+DMS.png" alt="MaziwaPlus Dairy Management System">
+                        <img class="product-image" loading="lazy" src="../../assets/images/m-dms.webp" alt="MaziwaPlus Dairy Management System">
                         <h4>MaziwaPlus Dairy Management System</h4>
                         <p class="product-spec">Cloud-based ERP platform</p>
                         <p class="product-description">Comprehensive dairy  management platform with real-time tracking, financial management, and market linkages.</p>
@@ -160,7 +160,7 @@
                 <div class="products-grid">
                     <!-- Product: MaziwaPlus Prechillers 300-1000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/M+%20PRE%20CHILLER.png" alt="MaziwaPlus Prechillers 300-1000L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/m-preciller.webp" alt="MaziwaPlus Prechillers 300-1000L">
                         <h4>MaziwaPlus Prechillers 300-1000L</h4>
                         <p class="product-spec">Entry-level hybrid milk chiller</p>
                         <p class="product-description">Efficiently cools and stores milk with hybrid power options. Customizable from 300-1000L capacity.</p>
@@ -173,7 +173,7 @@
 
                     <!-- Product: MaziwaPlus Prechillers Pro 200-2000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/pre%20chillers%20PRO.png" alt="MaziwaPlus Prechillers Pro 200-2000L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/pre-chillers-PRO.webp" alt="MaziwaPlus Prechillers Pro 200-2000L">
                         <h4>MaziwaPlus Prechillers Pro 200-2000L</h4>
                         <p class="product-spec">Advanced hybrid milk chiller</p>
                         <p class="product-description">Premium features for large farms  and milk collection centers. Enhanced efficiency with smart monitoring and analytics.</p>
@@ -186,7 +186,7 @@
 
                     <!-- Product: BMC Hybrid Milk Cooler -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/HYBRID%20BMC.png" alt="BMC Hybrid Milk Cooler">
+                        <img class="product-image" loading="lazy" src="../../assets/images/hybrid-bmc.webp" alt="BMC Hybrid Milk Cooler">
                         <h4>BMC Hybrid Milk Cooler</h4>
                         <p class="product-spec">Flexible solar + grid power</p>
                         <p class="product-description">Versatile hybrid system combining solar and grid power. Perfect for inconsistent solar areas.</p>
@@ -199,7 +199,7 @@
 
                     <!-- Product: BMC Solar Milk Cooler -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/SOLAR%20BMC.png" alt="BMC Solar Milk Cooler">
+                        <img class="product-image" loading="lazy" src="../../assets/images/solar-bmc.webp" alt="BMC Solar Milk Cooler">
                         <h4>BMC Solar Milk Cooler</h4>
                         <p class="product-spec">100% solar-powered</p>
                         <p class="product-description">Pure solar cooling with battery storage. Ideal for off-grid locations with maximum sustainability.</p>
@@ -212,7 +212,7 @@
 
                     <!-- Product: Eco-Sav Pasteurizer -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/PASTURERIZER.png" alt="Eco-Sav Pasteurizer 100-500L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/pasturerizer.webp" alt="Eco-Sav Pasteurizer 100-500L">
                         <h4>Eco-Sav Pasteurizer 100-500L</h4>
                         <p class="product-spec">Solar-powered pasteurization</p>
                         <p class="product-description">Professional milk pasteurization system powered by solar. Extends shelf life and meets safety standards.</p>
@@ -253,7 +253,7 @@
                 <div class="products-grid">
                     <!-- Product: Cup Filler & Sealer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/cup-filler-sealer.png" alt="Cup Filler & Sealer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/cup-filler-sealer.webp" alt="Cup Filler & Sealer">
                         <h4>Cup Filler & Sealer</h4>
                         <p class="product-spec">Semi/Automatic processing equipment</p>
                         <p class="product-description">Semi/Automatic cup filling and sealing machine. Cup size: 50ml-1000ml. Professional-grade processing solution. From KES 520,000</p>
@@ -264,7 +264,7 @@
 
                     <!-- Product: Homogenizer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/homogenizer.png" alt="Homogenizer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/homogenizer.webp" alt="Homogenizer">
                         <h4>Homogenizer</h4>
                         <p class="product-spec">High-pressure processing equipment</p>
                         <p class="product-description">Industrial homogenizer for dairy and beverage processing. Capacity: 100-2000L/h. Pressure Range: Up to 250 bar (adjustable). From KES 720,000</p>
@@ -275,7 +275,7 @@
 
                     <!-- Product: Pouch Filler & Sealer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/pouch-filler-sealer.png" alt="Pouch Filler & Sealer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/pouch-filler-sealer.webp" alt="Pouch Filler & Sealer">
                         <h4>Pouch Filler & Sealer</h4>
                         <p class="product-spec">Semi/Automatic packaging equipment</p>
                         <p class="product-description">Semi/Automatic pouch filling and sealing machine. Pouch size: 50ml-1000ml. Professional packaging solution. From KES 1.82M</p>
@@ -286,7 +286,7 @@
 
                     <!-- Product: Eco-Sav Solar Dryer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/DRYER.webp" alt="Eco-Sav Solar Dryer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/dryer.webp" alt="Eco-Sav Solar Dryer">
                         <h4>Eco-Sav Solar Dryer</h4>
                         <p class="product-spec">Solar-powered agricultural dryer</p>
                         <p class="product-description">Professional-grade solar dryer for grains, herbs, and produce. Extend storage life and add premium market value.</p>
