--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
     <!-- Background is now 100% clear -->
     <div class="hero-background">
         <video autoplay muted loop playsinline class="bg-media">
-            <source src="../assets/images/product page.mp4" type="video/mp4">
+            <source src="../assets/images/product-page.mp4" type="video/mp4">
         </video>
     </div>
     <!-- Content is inside a protective "Glass" card -->
@@ -49,7 +49,7 @@
     <section class="products-showcase">
         <div class="section-container">
             <div id="SOLAR-THRIVE" class="product-category">
-                 <h3 class="category-title"><img src=".. /assets/images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
+                 <h3 class="category-title"><img src=".. /assets/images/Solar-Thrive-Logo.webp" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
                 <div class="products-grid">
                     <div class="product-card" data-product="nomad-cans-10l">
                         <img class="product-image" loading="lazy" src="" alt="">
