--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
             <div class="solution-card">
                 <h3>Our Distributors</h3>
-                <p>Discover our full range of innovative, lastmile unbrokan cold chain solutions.</p>
+                <p>Discover our full range of innovative, lastmile unbroken cold chain solutions.</p>
                 <ul class="solution-steps">
                     <li>Review our product specifications</li>
                     <li>See the impact our products have on farmers</li>
