SEO optimization, Added some new images and fixed their paths

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <!-- Solar Thrive Ecosystem Section -->
 <section class="solar-thrive-section animate-on-scroll style="text-align: center;">
-    <h2 class="thrive-header"><img src=".. /assets/images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin: 0 auto 1rem auto;"></h2>
+    <h2 class="thrive-header"><img src="../../assets/images/solar-thrive-logo.webp" " alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin: 0 auto 1rem auto;"></h2>
     <div class="thrive-ecosystem-grid">
         <!-- Left Column -->
         <div class="thrive-tile tile-nomad">
@@ -202,6 +202,7 @@
                 </div>
                 <button id="calcSavingsBtn" class="cta-button primary">Calculate Savings</button>
                 <div id="savingsResult" class="savings-result"></div>
+                <p class="calculator-disclaimer">*Disclaimer: These figures are estimates based on average market rates. Actual savings may vary depending on local conditions and usage patterns.</p>
             </div>
         </details>
     </div>
