--- a/products.html
+++ b/products.html
@@ -49,7 +49,10 @@
     <section class="products-showcase">
         <div class="section-container">
             <div id="SOLAR-THRIVE" class="product-category">
-                 <h3 class="category-title"><img src=".. /assets/images/Solar-Thrive-Logo.webp" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
+                 <h3 class="category-title">
+                    <span class="visually-hidden">SOLAR THRIVE Collection</span>
+                    <img src="assets/images/solar-thrive-logo.webp" alt="SOLAR THRIVE - Portable Solar Cooling Solutions" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;">
+                 </h3>
                 <div class="products-grid">
                     <div class="product-card" data-product="nomad-cans-10l">
                         <img class="product-image" loading="lazy" src="" alt="">
@@ -224,11 +227,11 @@
             <h3 class="category-title">Annual Product Catalogue</h3>
             <div class="products-grid single-column">
                 <div class="product-card">
-                    <img class="product-image" src="../images/catalogue.jpeg" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
+                    <img class="product-image" src="../../assets/images/catalogue.webp" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
                     <h4>Annual Product Catalogue 2026 <span class="badge" style="font-size: 0.7rem; vertical-align: middle; margin-left: 8px;">New 2026</span></h4>
                     <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
                     <div class="product-actions">
-                        <a href="/images/SCT_Product Profile.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
+                        <a href="../../assets/images/SCT_Product Profile.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
                     </div>
                 </div>
             </div>
