--- a/store/index.html
+++ b/store/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description" content="Shop premium solar cooling and agricultural solutions at Savanna Circuit Store. Find Dairy and Fish cold chain solutions, SOLAR-THRIVE dryers, and dairy management systems.">
+    <meta name="description" content="Shop premium solar cooling and agricultural solutions at Savanna Circuit Store. Find Dairy and Fish cold chain solutions, SOLAR-THRIVE portable cooling, and dairy management systems.">
     <meta name="keywords" content="Solar cold chain solutions, Mobile cold chain solar cooling, cooling on the go, Fish cold chain solutions, solar fish cooling, landing site chilling, dairy equipment, Dairy cold chain solutions, solar milk cooling, pre-cooling systems agriculture technology,Solar cold chain system, integrated cold chain solution, Solar ice water cooling, ice water milk cooling, low-energy cooling system, Milk transport cooling container, insulated milk can, mobile cold chain container, Dairy/Fish Cold Chain, Solar Cooling, Last-Mile Mobility  Kenya, Savanna Circuit">
     
     <!-- Open Graph / Facebook -->
@@ -39,7 +39,7 @@
     <!-- Background is now 100% clear -->
     <div class="hero-background">
         <video autoplay muted loop playsinline class="bg-media">
-            <source src="../../assets/images/product page.mp4" type="video/mp4">
+            <source src="../../assets/images/product-page.mp4" type="video/mp4">
         </video>
     </div> 
     <!-- Content is inside a protective "Glass" card -->
@@ -70,7 +70,10 @@
         <div class="section-container">
                <!-- Solar Thrive Section: portable solutions and accessories -->
             <div id="SOLAR-THRIVE" class="product-category">
-                <h3 class="category-title"><img src="../images/Solar Thrive Logo.png" alt="SOLAR THRIVE Collection" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;"></h3>
+                <h3 class="category-title">
+                    <span class="visually-hidden">SOLAR THRIVE Collection - Portable Solar Cooling Solutions</span>
+                    <img src="../../assets/images/solar-thrive-logo.webp" alt="SOLAR THRIVE - Portable Solar Cooling & Cold Chain Solutions" style="max-width: 300px; height: auto; display: block; margin-bottom: 1.5rem;">
+                </h3>
                 <div class="products-grid">
                     <!-- Product: Nomad Cans 10L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
@@ -160,7 +163,7 @@
                 <div class="products-grid">
                     <!-- Product: MaziwaPlus Prechillers 300-1000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../../assets/images/m-preciller.webp" alt="MaziwaPlus Prechillers 300-1000L">
+                        <img class="product-image" loading="lazy" src="../../assets/images/m-pre-chiller.webp" alt="MaziwaPlus Prechillers 300-1000L">
                         <h4>MaziwaPlus Prechillers 300-1000L</h4>
                         <p class="product-spec">Entry-level hybrid milk chiller</p>
                         <p class="product-description">Efficiently cools and stores milk with hybrid power options. Customizable from 300-1000L capacity.</p>
@@ -253,10 +256,10 @@
                 <div class="products-grid">
                     <!-- Product: Cup Filler & Sealer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/cup-filler-sealer.webp" alt="Cup Filler & Sealer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/cup-fillers.webp" alt="Cup Filler & Sealer">
                         <h4>Cup Filler & Sealer</h4>
                         <p class="product-spec">Semi/Automatic processing equipment</p>
-                        <p class="product-description">Semi/Automatic cup filling and sealing machine. Cup size: 50ml-1000ml. Professional-grade processing solution. From KES 520,000</p>
+                        <p class="product-description">Semi/Automatic cup filling and sealing machine. Cup size: 50ml-1000ml. Professional-grade processing solution.</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Cup%20Filler%20%26%20Sealer" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -267,7 +270,7 @@
                         <img class="product-image" loading="lazy" src="../../assets/images/homogenizer.webp" alt="Homogenizer">
                         <h4>Homogenizer</h4>
                         <p class="product-spec">High-pressure processing equipment</p>
-                        <p class="product-description">Industrial homogenizer for dairy and beverage processing. Capacity: 100-2000L/h. Pressure Range: Up to 250 bar (adjustable). From KES 720,000</p>
+                        <p class="product-description">Industrial homogenizer for dairy and beverage processing. Capacity: 100-2000L/h. Pressure Range: Up to 250 bar (adjustable).</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Homogenizer" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
@@ -275,10 +278,10 @@
 
                     <!-- Product: Pouch Filler & Sealer -->
                     <div class="product-card" data-category="solar-processing-series">
-                        <img class="product-image" loading="lazy" src="../../assets/images/pouch-filler-sealer.webp" alt="Pouch Filler & Sealer">
+                        <img class="product-image" loading="lazy" src="../../assets/images/pouch-filler.webp" alt="Pouch Filler & Sealer">
                         <h4>Pouch Filler & Sealer</h4>
                         <p class="product-spec">Semi/Automatic packaging equipment</p>
-                        <p class="product-description">Semi/Automatic pouch filling and sealing machine. Pouch size: 50ml-1000ml. Professional packaging solution. From KES 1.82M</p>
+                        <p class="product-description">Semi/Automatic pouch filling and sealing machine. Pouch size: 50ml-1000ml. Professional packaging solution.</p>
                         <div class="product-actions">
                             <a href="https://wa.me/254798710210?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Pouch%20Filler%20%26%20Sealer" target="_blank" rel="noopener" class="cta-button secondary">Request Quote</a>
                         </div>
