--- a/store/products/eco-sav-bags.html
+++ b/store/products/eco-sav-bags.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>EcoSav Bags - Savanna Circuit Store</title>
+    <meta name="description" content="Shop EcoSav Bags. Durable, insulated carry packs for transporting fish and produce. Use with chilled glycol packs for extended freshness.">
+    <meta name="keywords" content="EcoSav Bags, insulated fish bags,Fish cold chain solutions, solar fish cooling, landing site chilling, produce transport bags, cold chain bags, fish preservation, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/eco-sav-bags.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="EcoSav Bags - Savanna Circuit Store">
+    <meta property="og:description" content="Durable, insulated carry packs for fisheries and produce cold chain. Preserves freshness and reduces spoilage.">
+    <meta property="og:image" content="../../assets/images/eco-sav-bag-1.webp">
+    <meta property="og:url" content="../../store/products/eco-sav-bags.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "EcoSav Bags",
+      "image": [
+        "../../assets/images/eco-sav-bag-1.webp"
+       ],
+      "description": "EcoSav Bags are durable, insulated carry packs designed for transporting fish and produce in cooled conditions using glycol ice ladder packs.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "ECO-SAV-BAGS",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/eco-sav-bags.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
