--- a/store/products/eco-sav-dryer.html
+++ b/store/products/eco-sav-dryer.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>Eco-Sav Dryer - Savanna Circuit Store</title>
+    <meta name="description" content="Shop the Eco-Sav Dryer. Solar-powered agricultural dryer for grains, fruits, and herbs. Reduce post-harvest losses and add value to produce.">
+    <meta name="keywords" content="Eco-Sav Dryer, solar dryer, agricultural dryer, fruit dryer, grain dryer, food preservation, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/eco-sav-dryer.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Eco-Sav Dryer - Savanna Circuit Store">
+    <meta property="og:description" content="Solar-powered agricultural product drying for value-added production. Convert farm surplus into valuable dried products.">
+    <meta property="og:image" content="../../assets/images/dryer.webp">
+    <meta property="og:url" content="../../store/products/eco-sav-dryer.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Eco-Sav Dryer",
+      "image": [
+        "../../assets/images/dryer.webp"
+       ],
+      "description": "The Eco-Sav Dryer enables solar-powered drying of agricultural products - from grains to herbs, fruits to leather. Convert farm surplus into valuable dried products.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "ECO-SAV-DRYER",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/eco-sav-dryer.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
