--- a/store/products/iwd-ice-water-dispenser.html
+++ b/store/products/iwd-ice-water-dispenser.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>Ice Water Dispenser (IWD) - Savanna Circuit Store</title>
+    <meta name="description" content="Shop the Ice Water Dispenser (IWD). Solar-powered chilled glycol water dispenser for first-mile cold chain cooling of milk and fish.">
+    <meta name="keywords" content="Ice Water Dispenser, IWD, solar water chiller,Solar ice water cooling, ice water milk cooling, low-energy cooling system, glycol chiller, last mile cooling,Fish cold chain solutions, solar fish cooling, landing site chilling milk cooling, fish cooling, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/iwd-ice-water-dispenser.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Ice Water Dispenser (IWD) - Savanna Circuit Store">
+    <meta property="og:description" content="Digitally metered, solar-powered glycol water dispenser for first-mile cold chain. Supports pay-per-use cooling.">
+    <meta property="og:image" content="../../assets/images/iwd.webp">
+    <meta property="og:url" content="../../store/products/iwd-ice-water-dispenser.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Ice Water Dispenser (IWD)",
+      "image": [
+        "../../assets/images/iwd.webp"
+       ],
+      "description": "The Stationary Ice Water Dispenser is a digitally controlled, solar-powered chilling system that produces and stores food-grade glycol-cooled water for cooling packs.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "IWD-DISPENSER",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/iwd-ice-water-dispenser.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
