--- a/store/products/maziwaplus-dms.html
+++ b/store/products/maziwaplus-dms.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>MaziwaPlus DMS - Savanna Circuit Store</title>
+    <meta name="description" content="MaziwaPlus DMS: Cloud-based dairy management software for real-time monitoring, route management, and digital records across the supply chain.">
+    <meta name="keywords" content="Dairy Management System, Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Solar cold chain system, integrated cold chain solution, MaziwaPlus DMS, milk collection software, dairy traceability, cooperative management software, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/maziwaplus-dms.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="MaziwaPlus DMS - Savanna Circuit Store">
+    <meta property="og:description" content="Cloud-based, mobile-integrated platform for real-time monitoring, route management, and digital records across the dairy supply chain.">
+    <meta property="og:image" content="../../assets/images/m-dms.webp">
+    <meta property="og:url" content="../../store/products/maziwaplus-dms.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "SoftwareApplication",
+      "name": "MaziwaPlus DMS",
+      "image": [
+        "../../assets/images/m-dms.webp"
+       ],
+      "description": "MaziwaPlus DMS is a cloud-based, mobile-integrated platform for real-time monitoring, route management, and digital records across the dairy supply chain.",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Android, Web",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/maziwaplus-dms.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
