--- a/store/products/maziwaplus-prechiller-300.html
+++ b/store/products/maziwaplus-prechiller-300.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>MaziwaPlus Prechillers 300-1000L - Savanna Circuit Store</title>
+    <meta name="description" content="Shop MaziwaPlus Prechillers (300-1000L). Entry-level hybrid milk chilling solution for small to medium-sized dairy operations.">
+    <meta name="keywords" content="MaziwaPlus Prechiller, milk chiller 300L, hybrid milk cooler, dairy cooling Kenya, small scale dairy equipment,Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Solar cold chain system, integrated cold chain solution,  Savanna Circuit">
+    <link rel="canonical" href="../../store/products/maziwaplus-prechiller-300.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="MaziwaPlus Prechillers 300-1000L - Savanna Circuit Store">
+    <meta property="og:description" content="Entry-level hybrid milk chilling solution designed for small to medium-sized dairy operations. Efficient cooling with solar integration.">
+    <meta property="og:image" content="../../assets/images/m-pre-chiller.webp">
+    <meta property="og:url" content="../../store/products/maziwaplus-prechiller-300.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "MaziwaPlus Prechillers 300-1000L",
+      "image": [
+        "../../assets/images/m-pre-chiller.webp"
+       ],
+      "description": "The MaziwaPlus Prechillers is an entry-level hybrid milk chilling solution designed for small to medium-sized dairy operations.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "MP-PRECHILLER-300",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/maziwaplus-prechiller-300.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
