--- a/store/products/maziwaplus-prechiller-pro.html
+++ b/store/products/maziwaplus-prechiller-pro.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>MaziwaPlus Prechillers Pro 200-2000L - Savanna Circuit Store</title>
+    <meta name="description" content="Shop MaziwaPlus Prechillers Pro (200-2000L). Advanced hybrid milk chilling with smart IoT monitoring for commercial dairy operations.">
+    <meta name="keywords" content="MaziwaPlus Prechiller Pro, smart milk chiller, hybrid dairy cooling, IoT dairy monitoring, commercial milk cooler,Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Solar cold chain system, integrated cold chain solution,  Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/maziwaplus-prechiller-pro.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="MaziwaPlus Prechillers Pro 200-2000L - Savanna Circuit Store">
+    <meta property="og:description" content="Advanced hybrid milk chilling solution with smart monitoring for medium to large-scale dairy operations.">
+    <meta property="og:image" content="../../assets/images/pre-chillers-pro.webp">
+    <meta property="og:url" content="../../store/products/maziwaplus-prechiller-pro.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "MaziwaPlus Prechillers Pro 200-2000L",
+      "image": [
+        "../../assets/images/pre-chillers-pro.webp"
+       ],
+      "description": "The advanced MaziwaPlus Prechillers Pro features smart M+ DMS monitoring, superior temperature precision, and enhanced capacity range.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "MP-PRECHILLER-PRO",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/maziwaplus-prechiller-pro.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
