--- a/store/products/bmc-hybrid.html
+++ b/store/products/bmc-hybrid.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>MaziwaPlus Bulk Milk Chiller (Hybrid) - Savanna Circuit Store</title>
+    <meta name="description" content="Shop the MaziwaPlus Bulk Milk Chiller (Hybrid). A solar-powered milk cooling system with grid/generator backup for cooperative hubs and aggregation centers.">
+    <meta name="keywords" content="Bulk Milk Chiller, Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Hybrid Milk Cooler, dairy cooling, milk collection center, cooperative dairy equipment, solar cooling, Savanna Circuit, Kenya, glycol chiller, milk preservation,">
+    <link rel="canonical" href="../../store/products/bmc-hybrid.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="MaziwaPlus Bulk Milk Chiller (Hybrid) - Savanna Circuit Store">
+    <meta property="og:description" content="Reliable hybrid milk cooling for cooperatives. Solar-powered with grid backup to ensure milk quality in off-grid or grid-limited areas.">
+    <meta property="og:image" content="../../assets/images/hybrid-bmc.webp">
+    <meta property="og:url" content="../../store/products/bmc-hybrid.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "MaziwaPlus Bulk Milk Chiller (Hybrid)",
+      "image": [
+        "../../assets/images/hybrid-bmc.webp"
+       ],
+      "description": "Designed for cooperative hubs and milk collection centers, Bulk Milk Chillers rapidly chill and store large volumes of milk. Powered by solar with hybrid backup options.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "BMC-HYBRID",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/bmc-hybrid.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
