--- a/store/products/bmc-solar.html
+++ b/store/products/bmc-solar.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>MaziwaPlus Bulk Milk Chiller (Solar) - Savanna Circuit Store</title>
+    <meta name="description" content="Shop the MaziwaPlus Bulk Milk Chiller (Solar). A solar-powered milk cooling system for cooperative hubs and aggregation centers, optimized for off-grid reliability.">
+    <meta name="keywords" content="Bulk Milk Chiller, Solar Milk Cooler, Dairy cold chain solutions, solar milk cooling, pre-cooling systems, Dairy cold chain solutions, solar milk cooling, pre-cooling systems, dairy cooling, milk collection center, cooperative dairy equipment, solar cooling, Savanna Circuit, Kenya, off-grid milk cooling">
+    <link rel="canonical" href="../../store/products/bmc-solar.html">
+,
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="MaziwaPlus Bulk Milk Chiller (Solar) - Savanna Circuit Store">
+    <meta property="og:description" content="Solar-powered glycol chilling for centralized, off-grid milk cooling. Designed for cooperative hubs and milk collection centers.">
+    <meta property="og:image" content="../../assets/images/solar-bmc1.webp">
+    <meta property="og:url" content="../../store/products/bmc-solar.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "MaziwaPlus Bulk Milk Chiller (Solar)",
+      "image": [
+        "../../assets/images/solar-bmc1.webp"
+       ],
+      "description": "Designed for cooperative hubs and milk collection centers, the solar-powered Bulk Milk Chiller rapidly chills and stores large volumes of milk. Optimized for off-grid reliability.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "BMC-SOLAR",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/bmc-solar.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
