--- a/store/products/eco-sav-pasteurizer.html
+++ b/store/products/eco-sav-pasteurizer.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Meta Tags -->
     <title>EcoSav Pasteurisers - Savanna Circuit Store</title>
+    <meta name="description" content="Shop EcoSav Pasteurisers. Solar-powered milk pasteurization for small-scale and cooperative dairy production. Ensure safety and extend shelf life.">
+    <meta name="keywords" content="EcoSav Pasteuriser, milk pasteurization machine, solar dairy processing, small scale dairy equipment, milk safety, Savanna Circuit, Kenya">
+    <link rel="canonical" href="../../store/products/eco-sav-pasteurizer.html">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="EcoSav Pasteurisers - Savanna Circuit Store">
+    <meta property="og:description" content="Safe, efficient milk processing with digital temperature control for small-scale and cooperative-level production.">
+    <meta property="og:image" content="../../assets/images/pasturerizer.webp">
+    <meta property="og:url" content="../../store/products/eco-sav-pasteurizer.html">
+    <meta property="og:site_name" content="Savanna Circuit Store">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "EcoSav Pasteurisers",
+      "image": [
+        "../../assets/images/pasturerizer.webp"
+       ],
+      "description": "EcoSav Pasteurisers enable safe, efficient milk processing, extending shelf life and meeting food safety standards. Built for small-scale and cooperative-level dairy production.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Savanna Circuit"
+      },
+      "sku": "ECO-SAV-PASTEURIZER",
+      "offers": {
+        "@type": "Offer",
+        "url": "../../store/products/eco-sav-pasteurizer.html",
+        "priceCurrency": "KES",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="../../assets/css/store.css">
 </head>
 <body>
